completed and tested project entity crud
